--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-
-{ "homepage": "https://beas00.github.io/Huddle-page/",
+{
+  "homepage": "https://beas00.github.io/Huddle-page/",
   "name": "hubble",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +13,9 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
-
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
